<resources>
    <string name="en_GB_lang" translatable="false">English (UK)</string>
    <string name="en_lang" translatable="false">English (US)</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
    <string name="bg_lang" translatable="false">Bulgarian</string>
    <string name="nl_lang" translatable="false">Dutch</string>
    <string name="fr_lang" translatable="false">French</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="el_lang" translatable="false">Greek</string>
    <string name="zh_lang" translatable="false">Chinese</string>
    <string name="it_lang" translatable="false">Italian</string>
    <string name="ko_lang" translatable="false">Korean</string>
    <string name="lt_lang" translatable="false">Lithuanian</string>
    <string name="pl_lang" translatable="false">Polish</string>
    <string name="pt_lang" translatable="false">Portuguese</string>
    <string name="pt_BR_lang" translatable="false">Portuguese, Brazilian</string>
    <string name="ro_lang" translatable="false">Romanian</string>
    <string name="ru_lang" translatable="false">Russian</string>
    <string name="sk_lang" translatable="false">Slovak</string>
    <string name="es_lang" translatable="false">Spanish</string>
    <string name="sv_lang" translatable="false">Swedish</string>
    <string name="tr_lang" translatable="false">Turkish</string>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_storage_permission_text">Please reboot your phone or restart AndroidAPS from the System Settings \notherwise Android APS will not have logging (important to track and verify that the algorithms are working correctly)!</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_careportal">Enter advanced log book entries.</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="description_ma">State of the algorithm in 2016</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_overview">Displays the current state of your loop and buttons for most common actions</string>
    <string name="description_persistent_notification">Shows an ongoing notification with a short overview of what your loop is doing</string>
    <string name="description_profile_local">Define a profile which is available offline.</string>
    <string name="description_profile_nightscout">Provides the profile you have defined in Nightscout</string>
    <string name="description_profile_simple">Define a profile with only one time block.</string>
    <string name="description_pump_combo">Pump integration for Accu-Chek Combo pumps, requires having ruffy installed</string>
    <string name="description_pump_dana_r">Pump integration for DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_korean">Pump integration for domestic DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_v2">Pump integration for DANA Diabecare R pumps with upgraded firmware</string>
    <string name="description_pump_dana_rs">Pump integration for DANA Diabecare RS pumps</string>
    <string name="description_pump_mdi">Pump integration for people who do multiple daily injections for their diabetes therapy</string>
    <string name="description_pump_virtual">Pump integration for pumps which don\'t have any driver yet (Open Loop)</string>
    <string name="description_sensitivity_aaps">Sensitivity is calculated the same way like Oref0, but you can specify timeframe to the past. Minimal carb absorption is calculated from max carb absorption time from preferences.</string>
    <string name="description_sensitivity_oref0">Sensitivity is calculated from 24h data in the past and carbs (if not absorbed) are cut after time specified in preferences.</string>
    <string name="description_sensitivity_oref1">Sensitivity is calculated from 8h data in the past and carbs (if not absorbed) are cut after time specified in preferences. Plugin also calculates UAM.</string>
    <string name="description_sensitivity_weighted_average">Sensitivity is calculated as a weighted average from deviations. Newer deviations have higher weight. Minimal carb absorption is calculated from max carb absorption time from preferences. This algorithm is the fastest in following sensitivity changes.</string>
    <string name="description_source_eversense">Receive BG values from the patched Eversense app.</string>
    <string name="description_source_glimp">Receive BG values from Glimp.</string>
    <string name="description_source_mm640g">Receive BG values from the 600SeriesAndroidUploader.</string>
    <string name="description_source_ns_client">Downloads BG data from Nightscout</string>
    <string name="description_source_xdrip">Receive BG values from xDrip.</string>
    <string name="description_treatments">Saves all treatments that were made</string>
    <string name="description_wear">Monitor and control AndroidAPS using your WearOS watch.</string>
    <string name="description_xdrip_status_line">Show information about your loop on your xDrip+ watchface.</string>
    <string name="omnicore_prefs">Omnipod Settings</string>
    <string name="show_omnicore_button_summary">Enable Omnicore button in Overview tab</string>
    <string name="omnicore_button">OmniCore Button</string>
    <string name="omnicore_log_failures">Log Failures in NS</string>
    <string name="omnicore_log_failures_summary">Log Command Failures to Nightscout</string>
    <string name="omnicore_log_pod_change_summary">Automatically Log Pod Changes to Care Portal</string>
    <string name="omnicore_log_pod_change_title">Log Pod Changes</string>
    <string name="omnicore_tab_status">Omnicore Status</string>
    <string name="omnicore_tab_test_connection_button">Test Omnicore Connection</string>
    <string name="omnicore_tab_resetpodstart_button">Set Pod Start Time</string>
    <string name="omnicore_tab_oc_state">Omnicore State</string>
    <string name="omnicore_tab_podid">Pod ID</string>
    <string name="omnicore_tab_reservoir">Reservoir</string>
    <string name="omnicore_tab_expiration">Pod Expiration</string>
    <string name="omnicore_tab_pod_started">Pod Started</string>
    <string name="omnicore_tab_change_by">Change Pod By</string>
    <string name="omnicore_tab_last_status">Last Status Update</string>
    <string name="key_omnipod_currentpodid" translatable="false">omnipod_currentpodid</string>
    <string name="key_show_omnicore_button" translatable="false">show_omnicore_button</string>
    <string name="key_omnicore_log_failures" translatable="false">log_omnicore_command_failures</string>
    <string name="key_omnicore_failure_audible" translatable="false">audible_omnicore_alarm</string>
    <string name="key_omnicore_status_history" translatable="false">omnicore_status_in_history</string>
    <string name="key_omnicore_alert_res_units" translatable="false">omnipod_expire_alert_units</string>
    <string name="key_omnicore_alert_res_refire" translatable="false">omnipod_res_alert_refire</string>
    <string name="key_omnicore_alert_prior_expire" translatable="false">omnipod_expire_alert_prior</string>
    <string name="key_omnicore_alert_expire_refire" translatable="false">omnipod_expire_alert_refire</string>
    <string name="key_omnicore_alert_urgent_expire" translatable="false">omnipod_expire_alert_urgent</string>
    <string name="key_omnicore_urgent_audible" translatable="false">omnipod_alert_urgent_audible</string>
    <string name="key_omnicore_urgent_refire" translatable="false">omnipod_alert_urgent_refire</string>
    <string name="key_omnicore_log_pod_change" translatable="false">omnipod_log_pod_change</string>
    <string name="key_omnicore_podchange_0" translatable="false">omnipod_blackout_0</string>
    <string name="key_omnicore_podchange_1" translatable="false">omnipod_blackout_1</string>
    <string name="key_omnicore_podchange_2" translatable="false">omnipod_blackout_2</string>
    <string name="key_omnicore_podchange_3" translatable="false">omnipod_blackout_3</string>
    <string name="key_omnicore_podchange_4" translatable="false">omnipod_blackout_4</string>
    <string name="key_omnicore_podchange_5" translatable="false">omnipod_blackout_5</string>
    <string name="key_omnicore_podchange_6" translatable="false">omnipod_blackout_6</string>
    <string name="key_omnicore_podchange_7" translatable="false">omnipod_blackout_7</string>
    <string name="key_omnicore_podchange_8" translatable="false">omnipod_blackout_8</string>
    <string name="key_omnicore_podchange_9" translatable="false">omnipod_blackout_9</string>
    <string name="key_omnicore_podchange_10" translatable="false">omnipod_blackout_10</string>
    <string name="key_omnicore_podchange_11" translatable="false">omnipod_blackout_11</string>
    <string name="key_omnicore_podchange_12" translatable="false">omnipod_blackout_12</string>
    <string name="key_omnicore_podchange_13" translatable="false">omnipod_blackout_13</string>
    <string name="key_omnicore_podchange_14" translatable="false">omnipod_blackout_14</string>
    <string name="key_omnicore_podchange_15" translatable="false">omnipod_blackout_15</string>
    <string name="key_omnicore_podchange_16" translatable="false">omnipod_blackout_16</string>
    <string name="key_omnicore_podchange_17" translatable="false">omnipod_blackout_17</string>
    <string name="key_omnicore_podchange_18" translatable="false">omnipod_blackout_18</string>
    <string name="key_omnicore_podchange_19" translatable="false">omnipod_blackout_19</string>
    <string name="key_omnicore_podchange_20" translatable="false">omnipod_blackout_20</string>
    <string name="key_omnicore_podchange_21" translatable="false">omnipod_blackout_21</string>
    <string name="key_omnicore_podchange_22" translatable="false">omnipod_blackout_22</string>
    <string name="key_omnicore_podchange_23" translatable="false">omnipod_blackout_23</string>
</resources>