<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".plugins.pump.omnipod.OmnicoreStatsFragment">
    <!-- Status -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="5dp"
            android:text="@string/omnicore_tab_status"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/omnicore_updatestatusbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/omnicore_tab_test_connection_button"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_oc_state"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_connectionstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_podid"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_podid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_reservoir"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_reservoir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_last_status"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_laststatustime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />


        <Button
            android:id="@+id/omnicore_setpodtime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/omnicore_tab_resetpodstart_button" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_pod_started"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_podstarttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_expiration"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/omnicorestatus_podage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/omnicorestatus_reservoir_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/omnicore_tab_change_by"
                android:textSize="14sp" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text=":"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/omnicorestatus_podchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/listdelimiter" />
    </LinearLayout>

</ScrollView>
<!--</LinearLayout>-->